# random-terrain

./: CMakeLists.txt  README.md
include/: Camera.h  Transformation.h  constants.h  functions.h  shader.h
shaders/: shader.frag  shader.vert
src/: Camera.cpp  Transformation.cpp  main.cpp  shader.cpp
